# quickaccess-0.8

./: CMakeLists.txt  ChangeLog  Messages.sh  README  button.cpp  button.h  dirmodel.cpp  dirmodel.cpp~  dirmodel.h  dirmodel.h~  effects.cpp  effects.h  iconmanager.cpp  iconmanager.h  itemview.cpp  itemview.h  label.cpp  label.h  plasma-applet-quickaccess.desktop  pluginmodel.cpp  pluginmodel.h  pluginwidget.cpp  pluginwidget.h  pluginwidgetbase.ui  popupdialog.cpp  popupdialog.cpp~  popupdialog.h  popupdialog.h~  quickaccess.cpp  quickaccess.cpp~  quickaccess.h  quickaccess.kdev4  quickaccessConfig.ui  quickaccess_dolphinSort_patch.diff  resizedialog.cpp~  resizedialog.h  settings.cpp  settings.cpp~  settings.h  settings.h~
